# max-capacity

./: Cargo.toml  README.md
src/: lib.rs  metadata.rs  vec.rs
src/collections/: hash_map.rs  hash_set.rs  mod.rs
