[package]
name = "max-capacity"
authors = ["Daniel Kolsoi <thadan64@gmail.com>"]
description = "A drop in tool for quantifying capacity usage"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
compact_str = "0.6"
dashmap = "5"
log = { version = "0.4" }
once_cell = "1"
tabled = "0.10"

[features]
default = []
